0.63 - suppressed ruby configure warning
	fixed glib detection if pkg-config isn't present
	fixed mono detection on freebsd
	fixed node.js yes/no misreport bug in configure script
	added freetds tcl test
	fixed slashes in tcl tests for windows
	updated docs to mention firebird buffer size parameters
	updated MAX_ITEM_BUFFER_SIZE to 32768 for firebird

0.62 - added query filter plugin framework
	added regex, string and pattern filters
	added normalization translation
	added reformatdatetime result set translation
	fixed error in sqlrconfigfile class that could cause sqlr-start to
		crash if one instance defines addresses but the next doesn't
	added query status flag to sqlrservercursor
	tweaked odbc driver's SQLGetTypeInfo()
	field name is passed into runResultSetTranslations() now
	added support for maxitembuffersize, maxselectlistsize,
		and maxbindcount for firebird
	added native api for node.js
	added recognition of bigint, ubigint and uniqueidentifier fields in
		freetds/sybase
	added nullsasnulls command to sqlrsh
	added workaround for freetds empty (but non-null) text fields not
		getting properly converted to null-terminated empty strings
	fetchatonce, maxitembuffersize and maxselectlistsize are set to
		defaulting values if invalid values are given for them
	added lazyconnect option to PHP PDO and Perl DBI drivers (defaults to 1)
	direct Transact SQL which returns a result set is now supported with 
		Sybase/SAP/MSSQLServer/FreeTDS
	added docs for authentication, query translation, query filter and
		result set translation modules
	added -fPIC to sqlrserver-config --cflags, if supported
	the "default" auth module is now called "userlist"
	added database auth module that is analagous to authtier="database"
	replaced passwordencryption attribute with passwordencryptionid
	added --disable-postgresql8-api configure option
	tweaked -Werror detection in configure script
	refactored sqlr-bench build to work on windows